# rivet

./: .gitignore  .rumdl.toml  Cargo.toml  GUI-ROADMAP.md  PARITY_MATRIX.md  README.md  ROADMAP.md  justfile  lychee.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rivet-time.toml  rivet.toml  typos.toml
.github/workflows/: ci.yml
branding/: color.css
crates/rivet-core/: Cargo.toml
crates/rivet-core/src/: cli.rs  commands.rs  config.rs  datastore.rs  datetime.rs  filter.rs  hooks.rs  lib.rs  render.rs  task.rs
crates/rivet-core/src/commands/: io_and_views.rs  modifiers.rs  prelude.rs  report.rs  task_ops.rs
crates/rivet-core/tests/: core_flow.rs
crates/rivet-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.yew.dev.json
crates/rivet-gui/src-tauri/capabilities/: default.json
crates/rivet-gui/src-tauri/icons/: icon.icns
crates/rivet-gui/src-tauri/src/: commands.rs  main.rs  state.rs
crates/rivet-gui/src-tauri/src/commands/: common.rs  config.rs  contacts.rs  dictionary.rs  external_calendar.rs  tasks.rs  window.rs
crates/rivet-gui/src-tauri/src/commands/fixtures/: contacts_gmail_sample.vcf  contacts_iphone_sample.vcf
crates/rivet-gui/ui/: Cargo.toml  Trunk.toml  Trunk.yew.toml  eslint.config.js  index.html  index.yew.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
crates/rivet-gui/ui/assets/: app.css  calendar.toml  tags.toml
crates/rivet-gui/ui/src/: api.rs  app.rs  components.rs  main.rs
crates/rivet-gui/ui/src/app/: calendar.rs  component.rs  filters.rs  storage.rs  tags.rs  types.rs  view_components.rs
crates/rivet-gui/ui/src/app/calendar_views/: format_calendar_due_datetime.rs  render_calendar_day_view.rs  render_calendar_markers.rs  render_calendar_month_view.rs  render_calendar_quarter_view.rs  render_calendar_view.rs  render_calendar_week_view.rs  render_calendar_year_view.rs  weekday_labels.rs
crates/rivet-gui/ui/src/app/view_components/: calendar_canvas_panel.rs  calendar_marker_legend.rs  calendar_meta_summary.rs  calendar_nav_actions.rs  calendar_period_task_card.rs  calendar_period_task_list_panel.rs  calendar_sidebar_panel.rs  calendar_stats_panel.rs  calendar_view_switch.rs  calendar_workspace.rs  external_calendar_delete_modal.rs  external_calendar_modal.rs  external_calendar_source_card.rs  external_calendar_source_list.rs  external_calendars_panel.rs  kanban_board_item.rs  kanban_board_list.rs  kanban_board_toolbar.rs  kanban_boards_sidebar.rs  kanban_filters_panel.rs  kanban_workspace.rs  new_kanban_board_modal.rs  rename_kanban_board_modal.rs  settings_workspace.rs  task_filters_panel.rs  task_modal.rs  tasks_right_stack.rs  tasks_workspace.rs
crates/rivet-gui/ui/src/components/: bulk_actions.rs  details.rs  facet_panel.rs  global_actions.rs  kanban_board.rs  kanban_card.rs  kanban_card_actions.rs  kanban_card_meta.rs  kanban_column.rs  mod.rs  sidebar.rs  tag_badge_style.rs  task_list.rs  task_list_row.rs  task_tag_badge.rs  window_brand.rs  window_chrome.rs  window_controls.rs  workspace_actions.rs  workspace_tab_button.rs  workspace_tab_list.rs  workspace_tabs.rs
crates/rivet-gui/ui/web/: App.tsx  main.tsx  styles.css
crates/rivet-gui/ui/web/api/: schemas.test.ts  schemas.ts  tauri.ts
crates/rivet-gui/ui/web/app/: AppShell.tsx
crates/rivet-gui/ui/web/components/: AddTaskDialog.tsx  DiagnosticsPanel.tsx  SettingsDialog.tsx  StatusChip.tsx  TagChip.tsx  TaskDetailsPanel.tsx  TaskEditDialog.tsx  TaskListPanel.tsx
crates/rivet-gui/ui/web/e2e/: smoke.spec.ts
crates/rivet-gui/ui/web/features/calendar/: CalendarWorkspace.tsx
crates/rivet-gui/ui/web/features/contacts/: ContactsWorkspace.tsx
crates/rivet-gui/ui/web/features/dictionary/: DictionaryWorkspace.test.tsx  DictionaryWorkspace.tsx
crates/rivet-gui/ui/web/features/kanban/: KanbanWorkspace.tsx
crates/rivet-gui/ui/web/features/map/: MapWorkspace.test.tsx  MapWorkspace.tsx  martin.test.ts  martin.ts  style.ts
crates/rivet-gui/ui/web/features/tasks/: TasksWorkspace.tsx
crates/rivet-gui/ui/web/lib/: calendar.ts  logger.ts  notifications.ts  storage.ts  tags.test.ts  tags.ts
crates/rivet-gui/ui/web/store/: selectors.test.ts  selectors.ts  slices.ts  useAppStore.test.ts  useAppStore.ts  useContactsStore.test.ts  useContactsStore.ts
crates/rivet-gui/ui/web/theme/: rivetTheme.ts  tokens.ts
crates/rivet-gui/ui/web/types/: config.ts  core.ts  ui.ts
crates/rivet-parity/: Cargo.toml
crates/rivet-parity/scenarios/: annotate_denotate.json  append_prepend.json  basic_flow.json  boolean_filters.json  context_activation.json  cross_status_modify.json  duplicate_undo.json  hooks_lifecycle.json  import_upsert.json  lifecycle_delete.json  log_command.json  report_focus.json  start_stop.json  virtual_tags.json  waiting_and_modify.json
crates/rivet-parity/src/: main.rs
docs/: dictionary-data-contract.md  dictionary-postgres-contract.md  frontend-contributing.md  gui-architecture.md  gui-parity-checklist.md  gui-performance-baseline.md  gui-success-gates.md  map-martin-troubleshooting.md  migration-yew-to-react.md  mui-component-audit.md  tauri-command-contracts.md  wayland-tauri-troubleshooting.md
tests/: parity_map.json
(+9 files in other folders)
