[package]
name = "rivet_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde", "clock"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.58", features = ["derive"] }
dirs = "6.0.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25.0"
toml = "1.0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "ansi"] }
unicode-width = "0.2.2"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
