[package]
name = "rivet_parity"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "rivet-parity"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "ansi"] }
