[package]
name = "rivet_gui_tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
parking_lot = "0.12.5"
rivet_core = { path = "../../rivet-core" }
rivet_gui_shared = { path = "../../rivet-gui-shared" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.2", features = [] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "ansi"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
