[package]
name = "rivet_gui_ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
rivet_gui_shared = { path = "../../rivet-gui-shared" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
tauri-wasm = { version = "0.2.0", features = ["serde"] }
toml = "1.0.1"
tracing = "0.1.44"
uuid = { version = "1.21.0", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
wasm-tracing = "2.1.0"
web-sys = { version = "0.3.85", features = ["Window", "Document", "Element", "Event", "HtmlInputElement", "HtmlSelectElement", "InputEvent", "KeyboardEvent", "MouseEvent", "Node", "SubmitEvent"] }
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
